[workspace]
members = [
    "build",
    "packages/lib-node/build",
    "packages/lib-node/lib",
    "packages/lib-react-native/android/build",
    "packages/lib-react-native/ios/build",
    "packages/lib-react-native/android/lib",
    "packages/lib-react-native/ios/lib",
    "packages/lib-web/lib",
    "packages/lib-web/build",
]
